core/indexer/tests/compile_fail/cases/bypass_balance_constructors.rs
// This test MUST fail to compile - demonstrates prevention of constructor bypass

use indexer::runtime::{ResourceManager, ContractAddress};
use indexer::runtime::balance;
use indexer::runtime::numerics;

fn main() {
    let mut manager = ResourceManager::new();

    // Attempt to bypass proper Balance constructors
    let token_addr = ContractAddress {
        name: "test_token".to_string(),
        height: 1,
        tx_index: 0,
    };

    // This MUST fail: trying to create Balance with raw data bypass
    // In a properly secured system, there should be no way to construct
    // Balance resources outside of the sanctioned constructors

    // Attempt 1: Direct struct construction (should be prevented)
    let raw_balance = balance::BalanceData {
        amount: numerics::u64_to_integer(999999).unwrap(),
        token: token_addr.clone(),
        owner_contract: 1,
    };
    // This should fail if BalanceData fields are not public

    // Attempt 2: Hypothetical Balance::from_raw() bypass (should not exist)
    // let bypassed_balance = Balance::from_raw(999999, token_addr);
    //                                ^^^^^^^^^ should not exist

    // Attempt 3: Unsafe transmutation (should be impossible)
    // let fake_balance: Balance = unsafe { std::mem::transmute(raw_data) };
    //                             ^^^^^^ should not be possible with resource types

    let _resource = manager.push_with_owner(raw_balance, 1).unwrap();

    // The type system should prevent all unauthorized Balance creation
    // Only Balance::new() called from the token contract should be valid
}